wear.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wear-service
  namespace: app-space
spec: 
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector: 
    app: webapp-wear
  type: ClusterIP
