webapp-food-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-food-service
  namespace: app-space
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-food 
  type: ClusterIP
